# api-tester

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  api-conf.toml  pyproject.toml  requirements.dev.txt  requirements.txt  setup.cfg
apitester/: __init__.py  __main__.py  auth.py  config.py  data.py  main.py  plugin_manager.py  specs.py  test.py  types.py  url.py  utils.py
apitester/app/: __init__.py  app.py
apitester/app/screens/: __init__.py  add_url.py  api_key.py  basic_auth_form.py  login.py  modal_form.py  plugin_list.py  quit.py
apitester/plugins/: __init__.py  bob.py  loginauth.py  xdebug.py
apitester/styles/: main.css
apitester/widgets/: __init__.py  endpoint.py  form.py  labels.py  loader.py  urltree.py
src/: auth.py  config.py  main.py  url.py  utils.py
src/styles/: main.css
