[project]
name = "api-test"
description = "Small, Simple api tester"
version = "0.0.1"
authors = [{ name = "Ben Gosney", email = "bengosney@googlemail.com" }]
dependencies = ["textual", "pydantic", "keyring", "Jinja2", "tinydb"]

[project.optional-dependencies]
dev = ["black", "mypy", "pip-tools", "pre-commit", "textual[dev]", "icecream"]

[project.scripts]
apitester = "apitester:app.run"

[tool.setuptools]
license-files = ["LICENSE"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 128
target-version = ['py311']

[tool.pycln]
all = true
