[project]
name = "api-test"
description = "Small, Simple api tester"
version = "0.0.1"
authors = [{ name = "Ben Gosney", email = "bengosney@googlemail.com" }]
dependencies = ["textual", "pydantic", "pydantic-settings", "keyring", "Jinja2", "tinydb", "aiohttp[speedups]", "pluggy"]

[project.optional-dependencies]
dev = ["black", "mypy", "pip-tools", "pre-commit", "textual-dev", "devtools"]

[project.scripts]
apitester = "apitester:app.run"

[tool.setuptools]
license-files = ["LICENSE"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 128
target-version = ["py311"]

[tool.ruff]
line-length = 128

[tool.pycln]
all = true

[tool.isort]
default_section = "THIRDPARTY"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
import_heading_future = "Future"
import_heading_stdlib = "Standard Library"
import_heading_thirdparty = "Third Party"
import_heading_firstparty = "First Party"
import_heading_localfolder = "Locals"
multi_line_output = 3
include_trailing_comma = "True"
force_grid_wrap = 0
use_parentheses = "True"
ensure_newline_before_comments = "True"
line_length = 128

[tool.pycodestyle]
max_line_length = 128

[tool.flake8]
exclude = ".git,*migrations*,node_modules,.history"
max-line-length = 128
extend-ignore = "E203"
